Fri Feb 21 18:00:38 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (EXTRA_libguile_la_SOURCES): New variable to hold
 	source files that are not always included in libguile but should
 	have their dependencies calculated by automake.  This variable is
 	recognized by automake, no further magic is needed.
	(libguile_la_DEPENDENCIES): Changed to @LIBLOBJS@.  Libtool wants
 	to deal exclusively with *.lo files, as it seems.  The *.o files
 	are built automatically when the corresponding *.lo file gets
 	built.

Wed Feb 19 14:04:23 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* list.h (scm_list_cdr_ref): Delete prototype; function no longer
	exists.

Thu Feb 13 21:44:07 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* unif.c (scm_array_set_x): minor change to argument error checking.

Tue Feb 11 18:19:47 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* Makefile.am (libguile_la_SOURCES): Remove backtrace.c, debug.c,
 	inet_aton.c, srcprop.c, stacks.c, and strerror.c from this list.
  	They should only be included in the library at configure.in's
 	discretion.
	(libguile_la_LDADD): Include the appropriate .lo files here.
	(libguile_la_DEPENDENCIES): List the corresponding .o files here,
	so we know when to build them (and their .lo bretheren).
	* configure.in (LIBLOBJS): New substituted variable.  We let
 	configure decide which .o files to include in LIBOBJS, and then
 	put the corresponding list of .lo files in LIBLOBJS.  The latter
	is what we pass to libtool.
	* Makefile.in, configure: regenerated.

Mon Feb 10 00:08:08 1997  Mikael Djurfeldt  <mdj@kenneth>

	* symbols.c (scm_sysintern0): New function.  Contains the core of
 	old scm_sysintern but doesn't take a second value argument.
	(scm_sysintern): Now uses scm_sysintern0.
	(scm_sysintern_no_module_lookup): Renamed to
 	scm_sysintern0_no_module_lookup and doesn't take a second value
 	argument any longer.

	* symbols.h (scm_sysintern0: Added declaration.
	